deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flagd
  annotations:
    openfeature.dev: "enabled"
spec:
  selector:
    matchLabels:
      app: flagd
  template:
    metadata:
      labels:
        app: flagd
    spec:
      containers:
      - name: flagd
        image: jamesmilligan/flagd
        command: ["./flagd"]
        args: [
          "start", 
          "--sync-provider", 
          "kubernetes", 
          "--sync-provider-args=featureflagconfiguration=featureflagconfiguration-demo",
          "--sync-provider-args=namespace=open-feature-operator-system",
          "--cors-origin", 
          '"*"'
          ]
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8013
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flagd-web-app
spec:
  selector:
    matchLabels:
      app: flagd-web-app
  template:
    metadata:
      labels:
        app: flagd-web-app
    spec:
      containers:
      - name: flagd-web-app
        image: jamesmilligan/flagd-web-client
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: flagd-svc
  labels:
    app: flagd
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8013
  selector:
    app: flagd
---
apiVersion: v1
kind: Service
metadata:
  name: flagd-web-app-svc
  labels:
    app: flagd-web-app
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: flagd-web-app
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flagd-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.org/proxy-connect-timeout: "1800"
    nginx.org/proxy-read-timeout: "1800"
    nginx.org/proxy-send-timeout: "1800"
    nginx.org/proxy-stream-timeout: "1800"
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: flagd-web-app-svc
      port:
        number: 3000
  rules:
  - http:
      paths:
      - path: /flagd(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: flagd-svc
            port:
              number: 8000
---
